--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -168,7 +168,7 @@
 	"button": {
 		"check": "检查",
 		"toggleAdvancedSearch": "高级查询",
-		"resetQuery": "重置查询",
+		"resetQuery": "重置/全部",
 		"refreshtodos": "刷新工作列表",
 		"create": "新建",
 		"import": "导入",
@@ -797,5 +797,11 @@
 		"nameit": "给它一个名字, 同名将被替换",
 		"pick": "请选择-->",
 		"reset": "重置搜索"
+	},
+	"pagination": {
+		"first": "第一页",
+		"prev": "前一页",
+		"next": "后一页",
+		"last": "最后页"
 	}
 }
